smote algorithm completed

--- a/smote/smote.ipynb
+++ b/smote/smote.ipynb
@@ -1,22 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "JUUfZKHbQdvF"
       },
@@ -27,21 +13,92 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "data = pd.read_csv('mammography.csv',header = None)       # load data\n",
-        "\n",
-        "X = data.iloc[:,:-1]                                      # mammography.data\n",
-        "y = data.iloc[:,-1]                                       # mammography.target"
-      ],
-      "metadata": {
-        "id": "LvEr0AjpXZtF"
-      },
-      "execution_count": 5,
-      "outputs": []
+        "# SMOTE Algorithm\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LvEr0AjpXZtF"
+      },
+      "outputs": [],
+      "source": [
+        "def smote(X,y,N,k):\n",
+        "  sample = get_minority_samples(X,y)\n",
+        "  T = len(sample)                         # number of minority class samples\n",
+        "\n",
+        "  if (N < 100):\n",
+        "    np.random.shuffle(sample)             # randomize the T minority class sample\n",
+        "    T = int(N/100 * T)\n",
+        "    N = 100\n",
+        "\n",
+        "  N = int(N/100)\n",
+        "  numattrs = sample.shape[1]              # number of attributes/features\n",
+        "  synthetic = np.empty((N*T,numattrs))\n",
+        "\n",
+        "  for i in range(T):\n",
+        "    distances = np.empty((0,2),float)\n",
+        "    for j in range(T):\n",
+        "      if (i!=j):\n",
+        "        distance = euclidean_distance(sample[i],sample[j])\n",
+        "        distances = np.append(distances,np.array([[j,distance]]),axis = 0)\n",
+        "    distances = distances[distances[:,1].argsort()]\n",
+        "    nnarray = distances[:,0].astype(int)\n",
+        "    populate(N,i,nnarray[:k],k,numattrs,sample,synthetic)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "Gq-giR8SiIE4"
+      },
+      "outputs": [],
+      "source": [
+        "def euclidean_distance(point1,point2):\n",
+        "      try:\n",
+        "        n = len(point1)\n",
+        "        distance = 0\n",
+        "        for i in range(n):\n",
+        "          distance += (point1[i] - point2[i])**2\n",
+        "        return np.sqrt(distance)\n",
+        "      except Exception as e:                                       # Raise Exception if point1 and point2 are of different dimension\n",
+        "        print(f'Exception: {type(e).__name__} - {e}')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7FYiOB4EwggU",
+        "outputId": "80f8e9e0-ff2c-4db4-c85c-72d232a5a40d"
+      },
+      "outputs": [],
+      "source": [
+        "def populate(N,i,nnarray,k,numattrs,sample,synthetic):\n",
+        "  newindex = 0                                                     # keeps count of number of synthetic samples generated\n",
+        "  while(N != 0):\n",
+        "    nn = np.random.randint(0,k)\n",
+        "    for attr in range(numattrs):\n",
+        "      dif = sample[nnarray[nn]][attr] - sample[i][attr]\n",
+        "      gap = np.random.randint(0,2)\n",
+        "      synthetic[newindex][attr] = sample[i][attr] + gap * dif\n",
+        "    newindex = newindex+1\n",
+        "    N = N - 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "def get_minority_samples(X,y):\n",
         "  N = len(X)                                                # total number of samples\n",
@@ -56,50 +113,35 @@
         "           sample[j] = np.array(X.iloc[i])\n",
         "           j=j+1\n",
         "  return sample"
-      ],
-      "metadata": {
-        "id": "Gq-giR8SiIE4"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "get_minority_samples(X,y)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7FYiOB4EwggU",
-        "outputId": "80f8e9e0-ff2c-4db4-c85c-72d232a5a40d"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[-0.33588879, -0.45250093, -0.59163147,  0.81725413, -0.37786573,\n",
-              "         1.0348956 ],\n",
-              "       [ 4.5929854 ,  1.9185499 , -0.45638679,  2.2645231 ,  1.9188402 ,\n",
-              "         0.70276103],\n",
-              "       [ 0.66025228, -0.37729969, -0.41130523,  1.7084005 ,  3.5208547 ,\n",
-              "         1.4005483 ],\n",
-              "       ...,\n",
-              "       [ 1.2049878 ,  1.7637238 , -0.50146835,  1.5624078 ,  6.4890725 ,\n",
-              "         0.93129397],\n",
-              "       [ 0.73664398, -0.22247361, -0.05065276,  1.5096647 ,  0.53926914,\n",
-              "         1.3152293 ],\n",
-              "       [ 0.17700275, -0.19150839, -0.50146835,  1.5788636 ,  7.750705  ,\n",
-              "         1.5559507 ]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
